# football-data-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  footballdata_sdk.py  footballdata_types.py  pyproject.toml
py/core/: context.py  operation.py  spec.py
py/entity/: area_entity.py  competition_entity.py  match_entity.py  person_entity.py  team_entity.py
py/feature/: base_feature.py  cache_feature.py  clienttrack_feature.py  debug_feature.py  idempotency_feature.py  log_feature.py  netsim_feature.py  paging_feature.py  proxy_feature.py  ratelimit_feature.py  retry_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_area_direct.py  test_area_entity.py  test_competition_direct.py  test_competition_entity.py  test_exists.py  test_feature.py  test_match_direct.py  test_match_entity.py  test_netsim.py  test_person_direct.py  test_person_entity.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_team_direct.py  test_team_entity.py
py/utility/: done.py  feature_add.py  feature_hook.py  feature_init.py  fetcher.py  make_error.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  make_url.py  param.py  prepare_auth.py  prepare_headers.py  prepare_method.py  prepare_path.py  result_headers.py  transform_request.py  transform_response.py
(+506 files in other folders)
